# fys5419

./: .gitignore  README.md  pyproject.toml
project_1/code/: optimize.py  part_a.ipynb  part_bc.ipynb  part_de.ipynb  part_fg.ipynb  qubit.py  vqe_binary.py  vqe_lipkin.py  vqe_unary.py  vqe_utils.py
project_1/report/: report.md
project_1/report/figures/: bell_circuit.tex  vqe_binary_circuit.tex  vqe_lipkin_twofermion_circuit.tex  vqe_unary_circuit.tex
project_2/code/: qft_test.ipynb  qpe_energy.ipynb  qpe_test.ipynb  shor_test.ipynb  test.ipynb  utils.py
project_2/report/: references.bib  report.md
project_2/report/figures/: fourier_circuit.tex
report_template/: README.md  template.tex  template.yml
src/python/: bitutils.py  circuit.py  fourier.py  gate.py  operator.py  qpe.py  qubit.py  shor.py  state.py  tensor.py  typehints.py  vqe_binary.py  vqe_lipkin.py  vqe_unary.py  vqe_utils.py
src/python/hundt/: bitutils.py  circuit.py  qoperator.py  state.py  tensor.py
